Add article docs

--- a/core/src/main/resources/i18n/jmock-messages.properties
+++ b/core/src/main/resources/i18n/jmock-messages.properties
@@ -317,6 +317,14 @@ jmock.func.MAppVersion.C1=\u751F\u6210\u4E00\u4E2A\u5E94\u7528\u7248\u672C\uFF0C
 jmock.func.MAppVersion.C2=\u751F\u6210\u4E00\u4E2A\u5E94\u7528\u7248\u672C\uFF0C\u524D\u7F00\u4F7F\u7528\u6307\u5B9A\u7684prefixDict\uFF0C\u6CA1\u6709\u53D1\u5E03\u72B6\u6001\u548C\u6784\u5EFA\u72B6\u6001
 jmock.func.MAppVersion.C3=\u751F\u6210\u4E00\u4E2A\u5E94\u7528\u7248\u672C\uFF0C\u524D\u7F00\u4F7F\u7528\u6307\u5B9A\u7684prefixDict\uFF0C\u53D1\u5E03\u72B6\u6001\u5B57\u5178\u4F7F\u7528\u6307\u5B9A\u7684releaseStateDict\uFF0C\u6CA1\u6709\u6784\u5EFA\u72B6\u6001
 jmock.func.MAppVersion.C4=\u751F\u6210\u4E00\u4E2A\u5E94\u7528\u7248\u672C\uFF0C\u524D\u7F00\u4F7F\u7528\u6307\u5B9A\u7684prefixDict\uFF0C\u53D1\u5E03\u72B6\u6001\u5B57\u5178\u4F7F\u7528\u6307\u5B9A\u7684releaseStateDict\uFF0C\u6784\u5EFA\u72B6\u6001\u5B57\u5178\u4F7F\u7528\u6307\u5B9A\u7684buildStateDict
+#--------------------------MArticle------------------------------------#
+jmock.func.MArticle.description=\u751F\u6210\u6587\u7AE0
+jmock.func.MArticle.parameter.paragraphCount=\u751F\u6210\u6BB5\u843D\u6570
+jmock.func.MArticle.parameter.wordCount=\u6700\u5927\u5B57\u6570
+jmock.func.MArticle.C1=\u751F\u6210\u9ED8\u8BA43\u4E2A\u6BB5\u843D\uFF0C\u957F\u5EA6800\u5B57\u5185\u4E2D\u6587\u6587\u7AE0
+jmock.func.MArticle.C2=\u751F\u6210\u6307\u5B9A\u8BED\u8A00\u9ED8\u8BA43\u4E2A\u6BB5\u843D\uFF0C\u957F\u5EA6800\u5B57\u5185\u4E2D\u6587\u6587\u7AE0
+jmock.func.MArticle.C3=\u57FA\u4E8E\u6307\u5B9A\u6BB5\u843D\u3001\u5B57\u6570\u548C\u8BED\u8A00\u751F\u6210\u6587\u7AE0
+jmock.func.MArticle.C4=\u57FA\u4E8E\u6307\u5B9A\u6BB5\u843D\u3001\u5B57\u6570\u548C\u5185\u5BB9\u751F\u6210\u6587\u7AE0
 #--------------------------MParagraph------------------------------------#
 jmock.func.MParagraph.description=\u751F\u6210\u6BB5\u843D\uFF0C\u9ED8\u8BA4\u6BB5\u843D\u957F\u5EA6 200-1000 \u4E2A\u5B57\u7B26\uFF0C\u9ED8\u8BA4\u652F\u6301 100 \u4E2A\u6BB5\u843D
 jmock.func.MParagraph.C1=\u751F\u6210\u4E00\u4E2A\u6BB5\u843D\uFF0C\u8BED\u8A00\u9ED8\u8BA4\u4E2D\u6587\uFF0C\u5B57\u5178\u4F7F\u7528\u9ED8\u8BA4
